# rimecraft

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  README_JP.md  biome.json  cmd.txt  package.json  requirements.md  rimecraft-dev-plan.md  turbo.json
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml
apps/tauri/: index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri/src/: App.tsx  globals.css  main.tsx
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/.cargo/: config.toml
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: lib.rs
apps/tauri/src/shims/: next-image.tsx  next-link.tsx  next-navigation.ts
apps/web/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/core/: agent-manager.ts  agent-prompts.ts  agent-roles.ts  command-manager.ts  editor-core.ts  game-compiler.ts  preview-manager.ts  project-manager.ts  scene-bridge.ts  scene-codegen.ts  scene-graph.ts  visual-commands.ts
apps/web/src/i18n/: en.ts  index.ts  ja.ts  locale.ts  zh.ts
apps/web/src/lib/: update-checker.ts
apps/web/src/stores/: agent-loop.ts  chat-store.ts  (+6 more)
docs/: rimecraft-dev-plan.md  rimecraft-feature-agent-dev.md  rimecraft-feature-editor.md  rimecraft-feature-lang.md  rimecraft-feature-resource.md  rimecraft-feature-template-update.md  rimecraft-review-0509.md  rimecraft-review-agent.md
scripts/: bump-version.mjs  download-cdn-assets.mjs  extract-skills.mjs
(+68 files in other folders)
